# time-aware-neural-network

./: .gitignore  README.md  discrete-time-leaky-integration.md  discussion.md  numba_ga.py  old.py  pyproject.toml  time_aware_neural_network.md  todos.md
Notebooks/: demo.ipynb  genetic_algorithm_test.ipynb  genetic_algorithm_test_v2.ipynb  nb_ga.ipynb  nb_genetic_algorithm_test.ipynb  nb_time_aware_visualization.ipynb  predictive_trading.ipynb  simple_time_aware_visualization.ipynb  sinus_simulation.ipynb  tests.ipynb  time_aware_visualization.ipynb
Notebooks/demo/: 01_generate_mock_data.ipynb  01_generate_mock_data_simple_rate.ipynb  02_data_analysis.ipynb  05_single_fitness.ipynb  06_population_fitness.ipynb  07_tournament_selection.ipynb
Notebooks/performance/: core.ipynb  evolution.ipynb  objective.ipynb
data/: mock.parquet  mock_processed.parquet
src/: __init__.py
src/evolution/: __init__.py  fitness.py  genetic_algorithm.py  individual.py  nb_fitness_pure.py  nb_genetic_algorithm_pure.py  nb_individual_pure.py  parallel_fitness.py
src/fitnesses/: fitness.py
src/neural/: __init__.py  nb_neuron.py  neuron.py
src/tann/: __init__.py
src/tann/evolution/: __init__.py  individual.py  population.py
tests/: test_nb_individual_pure.py
tests_numba/: test_01_parameters.py  test_02_init.py  test_03_6_activations.py  test_03_population.py  test_04_predict.py  test_06_tournament_selection.py
tests_numba_old/: test_01_weights.py  test_02_init.py  test_03_population.py  test_04_fitness.py  test_05_population_fitness.py  test_06_selection.py
(+4 files in other folders)
